--- a/Library.Auth/appsettings.json
+++ b/Library.Auth/appsettings.json
@@ -5,10 +5,6 @@
     "SECRETKEY": "very_complex_encryption_key",
     "LIFETIME": "3600"
   },
-  "LibraryDatabaseSettings": {
-    "ConnectionString": "mongodb://localhost:27017",
-    "DatabaseString": "Library"
-  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -16,5 +12,6 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "IPAddress": "http://localhost:56890/"
 }
